k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    service: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
