k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: default
  labels:
    app: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
