k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
         - path: /
           pathType: Prefix
           backend:
              service:
                name: ecommerce-service
                port:
                  number: 80
